<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="29"
    android:background="@drawable/background">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:weightSum="5"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/select_period"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
        <EditText
            android:id="@+id/last_weeks_count"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:gravity="center"
            android:background="#AAFF55"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:weightSum="5">
        <Spinner
            android:id="@+id/select_weight_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="vertical"
        android:background="@drawable/rounded_button"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="@string/bench"
                android:gravity="center" />
            <TextView
                android:id="@+id/bench_inc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="@string/squat"
                android:gravity="center" />
            <TextView
                android:id="@+id/squat_inc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="25sp"
                android:text="@string/deadlift"
                android:gravity="center" />
            <TextView
                android:id="@+id/deadlift_inc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>