<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="29">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Жим"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_gravity="left"
            android:layout_marginLeft="3dp"
            android:gravity="center_vertical|center_horizontal" />
        <Spinner
            android:id="@+id/daylist_bench"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/squat"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_gravity="left"
            android:layout_marginLeft="3dp"
            android:gravity="center_vertical|center_horizontal" />
        <Spinner
            android:id="@+id/daylist_squat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/deadlift"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_gravity="left"
            android:layout_marginLeft="3dp"
            android:gravity="center_vertical|center_horizontal" />
        <Spinner
            android:id="@+id/daylist_deadlift"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/light_bench"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_gravity="left"
            android:layout_marginLeft="3dp"
            android:gravity="center_vertical|center_horizontal" />
        <Spinner
            android:id="@+id/daylist_light_bench"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/light_squat"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_gravity="left"
            android:layout_marginLeft="3dp"
            android:gravity="center_vertical|center_horizontal" />
        <Spinner
            android:id="@+id/daylist_light_squat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <Space
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Режим работы"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_gravity="left"
            android:layout_marginLeft="3dp"
            android:gravity="center_vertical|center_horizontal" />
        <Spinner
            android:id="@+id/setting_week_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="14">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:text="Добавить режим"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:id="@+id/add_week_type"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <Button
            android:text="Удалить режим"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:id="@+id/del_week_type"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>